tests/reference/ast-fixed_form_simple_continue-dbefb27.stderr
tokenizer error: Expecting terminating symbol for program
 --> tests/fixed_form_simple_continue.f:1:7
  |
1 |       continue
  |       ^ 
